--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^8.0",
-        "laravel/lumen-framework": "^10.0",
-        "illuminate/pagination": "^10.0"
+        "laravel/lumen-framework": "^9.0|^10.0",
+        "illuminate/pagination": "^9.0|^10.0"
     }
 }
